[package]
name = "cacheline-ef"
version = "0.1.0"
edition = "2021"

[dependencies]
common_traits = "0.11.0"
epserde = { version = "0.6.1", optional = true }
epserde-derive = {version = "0.6.0", optional = true }

[features]
epserde = ["dep:epserde", "dep:epserde-derive"]

[dev-dependencies]
rand = "0.8.5"
