[package]
name = "cacheline-ef"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Ragnar Groot Koerkamp"]
repository = "https://github.com/RagnarGrootKoerkamp/cacheline-ef"
description = "Per-cacheline encoding of sorted integer sequences"
keywords = ["Elias-Fano", "compression"]
categories = ["data-structures", "science"]


[dependencies]
mem_dbg = "0.3.0"
common_traits = "0.11.0"
epserde = { version = "0.8.0", optional = true }

[features]
epserde = ["dep:epserde"]

[dev-dependencies]
rand = "0.9.0"
